--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <main>
         <h1>mundialis at <a href="https://2021.foss4g.org/"><img id="f4glogo" src="resources/img/logo_chico.svg">FOSS4G 2021</a> Buenos Aires</h1>
         <div class="flexparent">
-            <a class="event flexchild" href="https://callforpapers.2021.foss4g.org/foss4g-2021-workshop/talk/DXPVFS/">
+            <!--<a class="event flexchild" href="https://callforpapers.2021.foss4g.org/foss4g-2021-workshop/talk/DXPVFS/">-->
+            <a class="event flexchild" href="https://mmacata.github.io/actinia-introduction/">
                 <div class="maininfo">
                     <p>A gentle introduction to actinia:<br> geoprocessing in the cloud</p>
                 </div>
